--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="file:///Users/jackieguacmole/Desktop/Examples/The%20State%20of%20our%20Planet.svg" alt="Planet Awarness Logo">
+            <img src="The%20State%20of%20our%20Planet.svg" alt="Planet Awarness Logo">
         </div>
         <nav class="nav">
             <ul class="nav_list">
