Changed My Code Added More Photos

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
     <!-- White Box Above Polar Bear -->
     <section class="white-box">
         <div class="box-content">
+            <h2 class="intro-text">A World In Crisis</h2>
             <p>
                 The world is gradually collapsing as we go about our daily lives due to extreme weather events including flooding, devastating fires, increasing sea levels, and rising temperatures. These concerning events happening in our world are an indication of the long-term changes caused by climate change, which is permanently altering our world. A large portion of the blame for environmental harm has been unjustly shifted to consumers throughout this environmental crisis. We are frequently thrown information about the increasing amounts of greenhouse gases in the atmosphere caused by our daily activities, consumption of commodities linked to deforestation, and reliance on fossil fuels. Though individual accountability is important, large organizations are really to blame for their industrial methods, extensive deforestation, and stubbornness for more profit.
             </p>
+            <h3 class="intro-text">Who's Really Responsible?</h3>
             <p>
                 These corporations dominate the industrial, large-scale agricultural, and oil and gas sectors, which account for the vast majority of global emissions. By blaming individual people, they avoid taking responsibility and divert attention away from the structural changes needed to address the root causes of climate change. Why are we, the customers, getting all the blame when these companies are the ones wreaking such massive damage to the environment? What actions can we as a society and as individuals take to hold these corporations accountable for their role in the crisis and to put pressure on them to take decisive action to restore the earth to a more sustainable and balanced state? The capacity to insist on changing the subject.
             </p>
@@ -40,7 +42,20 @@
         
         <!-- Content Section with the 2nd Box -->
         <div class="box-content">
-                <p>Why we need to act now to prevent climate change.</p>
+            <h4 class="intro-text">How Can We Hold Them Accountable</h4>
+                <p>
+                    Change begins with shifting focus from individual blame to collective action. Here are key ways to make an impact:
+                </p>
+                <ul>
+                    <li>Advocate for Stronger Policies: Demand stricter laws to reduce emissions and protect ecosystems.</li>
+                    <li>Support Ethical Businesses: Choose products and services from companies committed to sustainability.</li>
+                    <li>Join Climate Movements: Participate in campaigns, petitions, and protests for environmental justice.</li>
+                    <li>Vote for Change: Elect leaders who prioritize climate policies and hold industries accountable.</li>
+                </ul>
+          <h5 class="intro-text">The Time To Act Now</h5>
+                <p>
+                    To reverse the damage, corporations must lead by adopting sustainable practices, but we must demand it. Every choice we make whether supporting eco-friendly brands or holding companies accountable helps shape a sustainable future. The climate crisis won’t wait, and neither can we.
+                </p>
         </div>
     </section>
     <footer>
