--- a/causes.html
+++ b/causes.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="causes.svg" alt="Causes Logo">
+            <img src="Causes.svg" alt="Causes Logo">
         </div>
         <nav class="nav">
             <ul class="nav_list">
@@ -31,7 +31,7 @@
                 <img src="burning fossil fuels.jpg" alt="Burning Fossil Fuels">
                 <h3 class="intro-text left-align">1. Burning Fossil Fuels</h3>
                 <p>
-                    The largest contributor to climate change is the burning of fossil fuels such as coal, oil, and natural gas for energy. These activities release massive amounts of carbon dioxide (CO₂) and other greenhouse gases, trapping heat in the atmosphere and raising global temperatures.
+                    Burning fossil fuels like coal, oil, and natural gas for energy is the biggest cause of climate change. Massive volumes of carbon dioxide (CO₂) and other greenhouse gases are released during these activities, trapping heat in the atmosphere and increasing global temperatures.
                 </p>
             </div>
 
@@ -39,7 +39,7 @@
                 <img src="deforestation.jpg" alt="Deforestation">
                 <h4 class="intro-text left-align">2. Deforestation And Land Use Change</h4>
                 <p>
-                    Forests absorb CO₂, playing a crucial role in balancing the Earth’s climate. However, large-scale deforestation for agriculture, logging, and urban development reduces this capacity, increasing greenhouse gases in the atmosphere.
+                    Forests are essential for maintaining the Earth's climate balance because they absorb CO2. However, this capacity is diminished by extensive deforestation for logging, urbanization, and agriculture, which raises atmospheric concentrations of greenhouse gasses.
                 </p>
             </div>
 
@@ -47,7 +47,7 @@
                 <img src="industrial activities.jpg" alt="Industrial Activities">
                 <h5 class="intro-text left-align">3. Industrial Activities</h5>
                 <p>
-                    Manufacturing processes release greenhouse gases such as methane, nitrous oxide, and CO₂. Industries like cement, steel, and chemical production also consume large amounts of energy, contributing to the crisis.
+                    Methane, nitrous oxide, and CO₂ are among the greenhouse gases released during manufacturing processes. The situation is exacerbated by the high energy use of sectors like steel, cement, and chemical manufacturing.
                 </p>
             </div>
 
@@ -55,7 +55,7 @@
                 <img src="agriculture and livestock.jpg" alt="Agriculture and Livestock">
                 <h6 class="intro-text left-align">4. Agriculture and Livestock</h6>
                 <p>
-                    Agricultural activities, particularly the raising of livestock, emit high levels of methane (a potent greenhouse gas). Fertilizers also release nitrous oxide, which significantly contributes to warming.
+                    Methane is a powerful greenhouse gas that is released in large quantities during agricultural operations, especially when livestock is raised. Nitrous oxide, another gas released by fertilizers, is a major cause of global warming.
                 </p>
             </div>
 
@@ -63,7 +63,7 @@
                 <img src="waste and pollution.jpg" alt="Waste and pollution">
                 <h7 class="intro-text left-align">5. Waste and Pollution</h7>
                 <p>
-                    Poor waste management leads to methane emissions from landfills, and the production and disposal of single-use plastics pollute both land and oceans, disrupting ecosystems and amplifying climate risks.
+                    Methane emissions from landfills are caused by poor waste management, and the manufacture and disposal of single-use plastics pollute the land and oceans, upsetting ecosystems and increasing the risks of climate change.
                 <p>
             </div>
 
@@ -71,7 +71,7 @@
                 <img src="transportation.jpg" alt="transportation">
                 <h8 class="intro-text left-align">6. Transportation</h8>
                 <p>
-                    Vehicles powered by fossil fuels emit significant amounts of CO₂. With more cars, planes, and ships in use worldwide, transportation remains a major source of global emissions.
+                    CO2 emissions from fossil fuel-powered vehicles are substantial. With more automobiles, aircraft, and ships in operation globally, transportation continues to be a significant contributor to emissions.
                 </p>  
             </div>
         </section>
