--- a/index.html
+++ b/index.html
@@ -25,11 +25,15 @@
         <div class="box-content">
             <h2 class="intro-text">A World In Crisis</h2>
             <p>
-                The world is gradually collapsing as we go about our daily lives due to extreme weather events including flooding, devastating fires, increasing sea levels, and rising temperatures. These concerning events happening in our world are an indication of the long-term changes caused by climate change, which is permanently altering our world. A large portion of the blame for environmental harm has been unjustly shifted to consumers throughout this environmental crisis. We are frequently thrown information about the increasing amounts of greenhouse gases in the atmosphere caused by our daily activities, consumption of commodities linked to deforestation, and reliance on fossil fuels. Though individual accountability is important, large organizations are really to blame for their industrial methods, extensive deforestation, and stubbornness for more profit.
+                The Earth is progressively crumbling while we live our lives because of extreme weather events including deadly fires, flooding, rising sea levels, and rising temperatures. These alarming global occurrences are a sign of the long-term transformations resulting from climate change, which is irrevocably changing our planet. During this environmental catastrophe, consumers have been unfairly held responsible for a significant amount of environmental harm. We are constantly inundated with information about how the amount of greenhouse gases in the atmosphere is rising as a result of our everyday activities, the burning of fossil fuels, and the consumption of goods associated with deforestation. Large firms are mostly responsible for their industrial practices, widespread deforestation, and stubbornness, despite the importance of individual accountability.
+
             </p>
             <h3 class="intro-text">Who's Really Responsible?</h3>
             <p>
-                These corporations dominate the industrial, large-scale agricultural, and oil and gas sectors, which account for the vast majority of global emissions. By blaming individual people, they avoid taking responsibility and divert attention away from the structural changes needed to address the root causes of climate change. Why are we, the customers, getting all the blame when these companies are the ones wreaking such massive damage to the environment? What actions can we as a society and as individuals take to hold these corporations accountable for their role in the crisis and to put pressure on them to take decisive action to restore the earth to a more sustainable and balanced state? The capacity to insist on changing the subject.
+                The bulk of global emissions are caused by huge corporations in the industrial, large-scale agriculture, and oil and gas sectors. These companies avoid responsibility and deflect attention from the changes that must be made to address climate change by blaming individuals.
+                If these businesses are causing the most of the damage, why are we, the consumers, being held responsible? The narrative must be changed. These industries control the primary sources of pollution, and while individual actions, such as reducing garbage, are helpful, they are unable to counteract the consequences of commercial activity.
+                To hold these companies responsible and force them to adopt sustainable methods, we must band together to push for legislation, start public awareness campaigns, and file lawsuits. To ensure real transformation,
+
             </p>
         </div>
     </section>
@@ -48,13 +52,13 @@
                 </p>
                 <ul>
                     <li>Advocate for Stronger Policies: Demand stricter laws to reduce emissions and protect ecosystems.</li>
-                    <li>Support Ethical Businesses: Choose products and services from companies committed to sustainability.</li>
+                    <li>Support Ethical Businesses: Choose products and services from companies that are more sustainable.</li>
                     <li>Join Climate Movements: Participate in campaigns, petitions, and protests for environmental justice.</li>
-                    <li>Vote for Change: Elect leaders who prioritize climate policies and hold industries accountable.</li>
+                    <li>Vote for Change: Vote for leaders who prioritize climate policies and hold industries accountable.</li>
                 </ul>
           <h5 class="intro-text">The Time To Act Now</h5>
                 <p>
-                    To reverse the damage, corporations must lead by adopting sustainable practices, but we must demand it. Every choice we make whether supporting eco-friendly brands or holding companies accountable helps shape a sustainable future. The climate crisis won’t wait, and neither can we.
+                    We must urge that companies take the lead in implementing sustainable practices in order to undo the harm. Every decision we make, whether it's to hold businesses responsible or to support environmentally friendly brands, contributes to the creation of a sustainable future. Neither we nor the climate crisis will wait.
                 </p>
         </div>
     </section>
