--- a/solutions.html
+++ b/solutions.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planet Awarness</title>
+    <title>Planet Awareness</title>
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <header>
         <div class="logo">
-            <img src="The%20State%20of%20our%20Planet.svg" alt="Planet Awarness Logo">
+            <img src="The%20State%20of%20our%20Planet.svg" alt="Planet Awareness Logo">
         </div>
-        <nav class="nav">
+        <nav>
             <ul class="nav_list">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="causes.html">Causes</a></li>
@@ -19,3 +19,58 @@
             </ul>
         </nav>
     </header>
+
+    <!-- Introduction Section -->
+    <section class="white-box">
+        <div class="box-content">
+            <h2 class="intro-text">Is There Really a Solution to Climate Change?</h2>
+            <p>
+                We might never fully know. With corporations holding so much power over industries that pollute the planet, 
+                it feels like individual actions might not be enough. As much as we recycle and clean up the earth, fast fashion is still thriving. 
+                Even your favorite celebrities—like Taylor Swift—are contributing to the problem, with their private jets and unsustainable lifestyles.
+            </p>
+            <h3 class="intro-text">What’s Holding Us Back?</h3>
+            <p>
+                Large corporations dominate industries responsible for high carbon emissions—such as oil, gas, fast fashion, and agriculture. 
+                Despite public pressure, these companies often avoid sustainable changes in favor of profit. They contribute to greenwashing, 
+                misleading consumers into believing products are environmentally friendly. While individuals are encouraged to recycle and buy green, 
+                these small actions alone cannot solve a problem created on such a massive scale.
+            </p>
+        </div>
+    </section>
+
+    <!-- Union Square Climate Clock Section -->
+        <section class="white-box" style="display: flex; align-items: center; gap: 20px; margin: 20px;">
+        <div class="box-content" style="flex: 1;">
+            <img src="climate change clock.jpeg" alt="Union Square Climate Clock" style="width: 100%; border-radius: 8px; box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);">
+        </div>
+        <div class="box-content" style="flex: 1;">
+            <h4 class="intro-text">The Union Square Climate Clock: 5 Years Left</h4>
+            <p>
+                The Union Square Climate Clock reminds us that we only have 5 years to act before it’s too late. 
+                It’s a sobering reminder that time is running out. What are we doing with the time we have left? 
+                Are we holding the right people and industries accountable, or are we being distracted by the idea that individual actions alone can save the planet?
+            </p>
+        </div>
+    </section>
+
+    <!-- Time to Act Section -->
+    <section class="white-box">
+        <div class="box-content">
+            <h5 class="intro-text">The Time To Act Now</h5>
+            <p>
+                We must urge that companies take the lead in implementing sustainable practices in order to undo the harm. Every 
+                decision we make, whether it’s to hold businesses responsible or to support environmentally friendly brands, contributes to the creation of a sustainable future. Neither we nor the climate crisis will wait.
+            </p>
+        </div>
+    </section>
+x
+    <footer>
+        <p style="color: #EFF7F6; font-size: 1.6em; font-weight: bold;"> 
+            Join the fight against climate change. 
+            <a href="https://climatenetwork.org/" style="color: #B27092; font-size: 1.2em;">Get involved</a> 
+        </p>
+    </footer>  
+</body>
+</html>
+
